--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+html {
+  font-size: 62.5%;
+}
+
+li, ul {
+  margin-left: 0;
+  padding-left: 0;
+} 
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.navbar-container {
+  /* display: flex; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar {
+  font-size: 1rem;
+  background: lightblue;
+  width: 100%;
+  /* display: fixed; */
+  font-style: Arial;
+  height: 10vh;
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-links {
+  font-size: 2rem;
+  margin: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-decoration: none;
+  list-style: none;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.authorized {
+  font-size: 10rem;
 }
