--- a/src/App.css
+++ b/src/App.css
@@ -64,14 +64,14 @@ a {
   font-size: 1.5rem;
 }
 
-.modal-container {
+.error-modal-container {
   display: flex;
   justify-content: center;
   padding-top: 5rem;
 }
 
 
-.modal {
+.error-modal {
   width: 30%;
   height: 20vh;
   border: 1px solid black;
@@ -131,4 +131,78 @@ a {
 
 .post-author {
   color: #999;
+}
+
+
+/* ***********************************************  Modal   **************************************/
+
+.modal-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	background-color: rgba(0,0,0,0.3);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
+}
+
+.modal-info-container {
+	background-color: #333;
+	color: #f2b01e;
+	border-radius: 0.4rem;
+	border: 1px solid #f2b01e;
+	padding: 5rem;
+	width: 50%;
+	height: 80%;
+	z-index: 1;
+	overflow: auto;
+	/* // min-width: 32rem; */
+}
+
+.modal-bg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.modal-post-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+
+.modal-post-title {
+  font-size: 3rem;
+  text-align: left;
+}
+
+.post-details {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  
+}
+
+
+
+.modal-post-description {
+  font-size: 2rem;
+  text-align: left;
+}
+
+.modal-post-author {
+  font-size: 1.5rem
+
+}
+
+.modal-post-subreddit {
+  font-size: 1.5rem;
+  padding-bottom: 0.25rem;
 }
