--- a/src/App.css
+++ b/src/App.css
@@ -262,3 +262,12 @@ a {
   font-size: 10rem;
   color: black;
 }
+
+.comment-reply {
+  display: inline-block;
+  border: 0.1rem solid #555;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 0.5 0.5 0.5;
+  cursor: pointer;
+}
