--- a/src/App.css
+++ b/src/App.css
@@ -272,7 +272,80 @@ a {
   cursor: pointer;
 }
 
-.comment-input {
-  width: 50rem;
+textarea {
+  width: 80%;
+  height: 80%;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+/* input[type="submit"] {
+  width: 10%;
+  height: 10%;
+} */
+
+.comment-form {
+  padding-top: 1rem;
   height: 20rem;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* flex-direction: row; */
+  /* align-items: center; */
+  /* justify-content: center; */
+
+}
+
+.comment-input {
+  width: 100%;
+  /* width: 50rem;
+  height: 100rem; */
+}
+
+.comment-submit {
+  margin-left: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #222;
+  background: rgb(221, 211, 211);
+  padding: 0.9rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+  width: 15rem;
+}
+
+.comment-submit:hover {
+  cursor: pointer;
+  color: #fff !important;
+  border: 0.1rem solid black;
+  /* border-color: #111 !important; */
+  transition: all 0.3s ease 0s;
+}
+
+.cancel-comment {
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  background: #333;
+  padding: 0.9rem;
+  /* border: 0.1rem solid white; */
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+
+.cancel-comment:hover {
+  cursor: pointer;
+  color: black !important;
+  border-radius: 0.5rem;
+  border: 0.1rem solid black;
+  /* border-color: #494949 !important; */
+  transition: all 0.3s ease 0s;
+}
+
+.comment-buttons {
+  margin-left: 0.5rem;
+  margin-top: 0.3rem;
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
 }
