--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,6 @@ a {
 .post-author {
   color: #999;
   display: flex;
-
 }
 
 
@@ -155,19 +154,47 @@ a {
   
 }
 
+
+
+
 .modal-info-container {
-	background-color: #333;
-	color: #f2b01e;
+	background-color: #ffffff;
+  /* color: #4a4a4a; */
+  color: #777;
 	border-radius: 0.4rem;
-	border: 1px solid #f2b01e;
+	border: 1px solid #fcfcfc;
 	padding: 5rem;
 	width: 50%;
 	height: 80%;
 	z-index: 1;
-	overflow: auto;
+  overflow: auto;
+  font-size: 1.2rem;
   /* // min-width: 32rem; */
   /* transform: scale(0); */
   /* animation: blowU */
+  content: '';
+  box-shadow: 0 5px 15px rgba(0,0,0,0.9);
+}
+/* .profile-post-container::after {
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 5px;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-radius: 0.5rem;
+  
+  transition: opacity 0.3s ease-in-out;
+} */
+
+
+.close-modal-btn {
+  background: inherit;
+  border: none;
+  cursor: pointer;
 }
 
 .modal-open {
@@ -193,19 +220,27 @@ a {
 }
 
 .modal-post-title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: left;
   padding: 2rem 2rem 2rem 0rem;
+  color: #4a4a4a;
 }
 
 .post-details {
+  display: flex;
+  justify-content: space-between;
   margin-top: 2rem;
+  padding: 0rem 2rem 0rem 0rem;
   /* display: flex;
   justify-content: center;
   align-items: center; */
   
 }
 
+.author-subreddit-container {
+  /* display: flex;
+  justify */
+}
 
 
 .modal-description {
@@ -215,19 +250,27 @@ a {
 }
 
 .modal-post-author {
-  font-size: 1.5rem
+  font-size: 1.5rem;
+  color: #5c75f3;
 
 }
+
+.modal-post-date {
+  color: #b8b8b8;
+  font-size: 1.5rem;
+}
+
 
 .modal-post-subreddit {
   font-size: 1.5rem;
   padding-bottom: 0.25rem;
+  color: #4a4a4a;
 }
 
 .modal-thumbnail-container {
   width: auto;
   height: 15rem;
-  border: 0.1rem solid #999;
+  /* border: 0.1rem solid #999; */
   border-radius: 0.2rem;
   display: flex;
   align-items: center;
@@ -239,7 +282,7 @@ a {
   margin-top: 1rem;
   margin-left: 2.5rem;
   padding: 3rem;
-  border: 0.1rem solid black;
+  border-left: 0.1rem solid #b1b1b1;
   height: 90%;
 }
 
@@ -250,13 +293,27 @@ a {
   justify-content: space-between; */
 }
 
-.comments {
+.comment-text-body {
+  display: flex;
+  justify-content: left;
+  padding: 1rem;
+  /* align-items: center; */
+}
 
+.comment {
+  padding-left: 1rem;
+}
+
+.comment p {
+  padding: 0;
+  margin: 0;
 }
 
 .comment-author {
   /* margin-left: 2rem; */
-  color: white;
+  color: #5c75f3;
+  /* color: #b1b1b1; */
+  font-size: 1.5rem;
 }
 
 .children-comments {
@@ -268,7 +325,7 @@ a {
 }
 
 a {
-  color: yellow;
+  color: #4a4a4a;
   text-decoration: underline;
 }
 
@@ -284,6 +341,7 @@ a {
   padding: 0.5rem;
   margin: 0.5 0.5 0.5;
   cursor: pointer;
+  color: black;
 }
 
 textarea {
