--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,76 @@ li, ul {
   background-color: #fcfcfc;
 }
 
+.left-side-app {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+.main-routes {
+  width: 50%
+}
+
+.right-side-app {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+}
+
+
+.master-app-container {
+  display: flex;
+  justify-content: center;
+}
+
+.profile-avatar {
+  /* border: 0.1rem solid black;
+  border-radius: 50%; */
+  width: 4rem;
+  height: auto;
+  
+}
+
+.profile-avatar:hover {
+  cursor: pointer;
+  opacity: 0.2;
+  display: flex;
+  align-items: center;
+  
+  
+}
+
+.profile-picture-container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding-right: 2rem;
+  height: 100%;
+}
+
+.profile-img {
+  border-radius: 50%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.top-navbar {
+  font-size: 1rem;
+  background: #fff;
+  width: 100%;
+  height: 6vh;
+  /* display: fixed; */
+  font-style: Arial;
+  text-decoration: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
+  
+}
+
+
+
+
+
 
 .navbar-container {
   /* display: flex; */
@@ -20,23 +90,42 @@ li, ul {
 .navbar {
   font-size: 1rem;
   background: #fff;
-  width: 100%;
+  width: 90%;
+  /* height: 20vh; */
   /* display: fixed; */
   font-style: Arial;
-  height: 10vh;
   text-decoration: none;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-decoration: none;
 }
 
 .navbar-links {
+  width: 100%;
   font-size: 2rem;
   margin: 0;
-  display: flex;
-  justify-content: space-evenly;
+  padding: 1rem;
+  /* display: flex; */
+  /* flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  text-decoration: none;
+  text-decoration: none; */
   list-style: none;
   height: 100%;
+}
+
+.menu {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.list-item {
+  padding: 1rem;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
 
 a {
@@ -135,6 +224,7 @@ a {
 .post-author {
   color: #999;
   display: flex;
+  align-items: center;
 }
 
 
@@ -422,6 +512,7 @@ svg {
 
 .comment-author {
   /* margin-left: 2rem; */
+  padding-left: 1rem;
   color: #5c75f3;
   /* color: #b1b1b1; */
   font-size: 1.5rem;
@@ -431,6 +522,21 @@ svg {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.modal-author-info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.modal-author-img-container {
+  width: 2rem;
+  height: auto;
+}
+
+.modal-author-img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .comment-date {
@@ -447,7 +553,7 @@ svg {
 
 a {
   color: #4a4a4a;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 .deleted-comment {
@@ -551,11 +657,75 @@ textarea {
 
 
 
+
 /* Profile Component */
+
+
+
 .master-container {
   display: flex;
   justify-content: center;
   margin-bottom: 3rem;
+}
+
+.sort-container {
+  display: flex;
+  justify-content: center;
+}
+
+.sortByMenuContainer {
+  background-color: #ffffff;
+  /* background-color: red; */
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.sort-by-text {
+  font-size: 1.5rem;
+  margin-left: 1rem;
+}
+
+.menu-svg-container {
+  margin: 0 2rem 0 2rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ececec;
+  border-radius: 10%;
+}
+
+.HotSVG {
+  width: 3rem;
+  height: auto;
+}
+
+.BestSVG {
+  width: 3rem;
+  height: auto;
+}
+.RisingSVG {
+  width: 3rem;
+  height: auto;
+}
+
+.TopSVG {
+  width: 3rem;
+  height: auto;
+}
+
+.NewSVG {
+  width: 3rem;
+  height: auto;
+}
+
+.sort-menu-svg {
+  fill: #4a4a4a;
 }
 
 
@@ -564,7 +734,7 @@ textarea {
   display: inline-block;
   background-color: #ffffff;
   height: 30rem;
-  width: 50%;
+  width: 90%;
   padding: 2rem;
   border-radius: 0.5rem;
   /* box-shadow: 0 1px 2px rgba(0,0,0,0.15); */
@@ -664,6 +834,23 @@ textarea {
   /* -webkit-line-clamp: 4; */
 }
 
+.author-img-container {
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 1.5rem;
+  /* border-radius: 50%; */
+  
+}
+
+.author-img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 50%;
+}
+
 .author-text {
   color: #5c75f3;
 }
@@ -672,7 +859,8 @@ textarea {
 .post-sub-info {
   display: flex;
   justify-content: space-evenly;
-  padding: 2rem;
+  align-items: center;
+  /* padding: 2rem; */
   font-size: 1.2rem;
 }
 
