--- a/src/App.css
+++ b/src/App.css
@@ -53,10 +53,12 @@ li, ul {
 
 .profile-picture-container {
   display: flex;
+  justify-content: flex-end;
   flex-direction: row-reverse;
   align-items: center;
   padding-right: 2rem;
   height: 100%;
+  width: 10%;
 }
 
 .profile-img {
@@ -123,9 +125,13 @@ li, ul {
 }
 
 .list-item {
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 2rem;
   font-size: 1.5rem;
   text-decoration: none;
+}
+
+.active {
+  background-color:#3d5af1;
 }
 
 a {
@@ -691,42 +697,81 @@ textarea {
 }
 
 .menu-svg-container {
+  background-color: inherit;
+  border: none;
+  text-decoration: none;
   margin: 0 2rem 0 2rem;
   padding: 1rem;
   display: flex;
+  width: 10%;
   justify-content: center;
   align-items: center;
-  background-color: #ececec;
+  /* background-color: #ececec; */
   border-radius: 10%;
   cursor: pointer;
 }
 
+
+.Best-container {
+
+}
+
+.Rising-container {}
+
+
+
+
+
+
 .HotSVG {
-  width: 2rem;
+  width: 30%;
   height: auto;
 }
 
 .BestSVG {
-  width: 2rem;
+  width: 30%;
   height: auto;
 }
 .RisingSVG {
-  width: 2rem;
+  width: 30%;
   height: auto;
 }
 
 .TopSVG {
-  width: 2rem;
+  width: 30%;
   height: auto;
 }
 
 .NewSVG {
-  width: 2rem;
+  width: 30%;
   height: auto;
 }
 
 .sort-menu-svg {
   fill: #4a4a4a;
+}
+
+#active {
+  background-color: #ececec;
+}
+
+#hot {
+  background-color: #ececec; 
+}
+#best {
+background-color: #ececec; 
+}
+
+#new {
+background-color: #ececec; 
+}
+
+#top {
+background-color: #ececec; 
+}
+
+#rising {
+background-color: #ececec; 
 }
 
 
