--- a/src/App.css
+++ b/src/App.css
@@ -131,27 +131,53 @@ li, ul {
 
 .activeMargin {
   background-color: #3d5af1;
+  /* height: 100%; */
+
 }
 
 .activeText {
+  width: 100%;
+  /* height: 100%; */
+  align-items: center;
+  padding-left: 0.5rem;
   background-color: rgba(61, 90, 241, 0.2);
+  display: flex;
+  align-items: center;
+}
+
+.link-text {
+  /* height: 100%; */
+}
+
+.menu-text {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  font-size: 1.5rem;
+}
+
+
+.menu {
+  text-align: center;
 }
 
 .menu-title {
-  width: 95%;
+  width: 100%;
   height: 100%;
   background-color: black;
 }
 
 .menu {
-  text-align: center;
+  /* text-align: center; */
   font-size: 2rem;
 }
 
 .list-item {
-  /* background-color: inherit; */
+  /* background-color: #3d5af1; */
   display: flex;
-  padding: 1rem 1rem 1rem 2rem;
+  align-items: center;
+  height: 3vh;
+  padding: 1rem 4rem;
   font-size: 1.5rem;
   text-decoration: none;
 }
@@ -703,6 +729,7 @@ textarea {
 .sort-container {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .sortByMenuContainer {
@@ -713,7 +740,7 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 90%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -785,7 +812,7 @@ textarea {
   position: relative;
   display: inline-block;
   background-color: #ffffff;
-  height: 30rem;
+  height: 33rem;
   width: 90%;
   padding: 2rem;
   border-radius: 0.5rem;
