--- a/src/App.css
+++ b/src/App.css
@@ -474,10 +474,20 @@ a {
   /* align-items: center; */
 }
 
-.closeSVG {
-  fill: #bbbbbb;
-  text-align: right;
+.close-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.close-svg-container {
   cursor: pointer;
+}
+
+.closeSVG {
+  /* width: 10%; */
+  fill: #bbbbbb;
+  /* text-align: right; */
+  
 }
 
 
@@ -812,7 +822,7 @@ textarea {
   position: relative;
   display: inline-block;
   background-color: #ffffff;
-  height: 33rem;
+  height: 30rem;
   width: 90%;
   padding: 2rem;
   border-radius: 0.5rem;
