--- a/src/App.css
+++ b/src/App.css
@@ -629,18 +629,56 @@ a {
   color: black;
 }
 
+.reply-input-container {
+}
+
+.reply-text-area {
+  /* width: 60rem; */
+}
+
 .comment-reply {
-  display: inline-block;
-  border: 0.1rem solid #555;
+  /* display: inline-block; */
+  border: 0.1rem solid #b1b1b1;
   border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin: 0.5 0.5 0.5;
+  padding: 0.9rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  /* margin: 0.5 0.5 0.5; */
+  /* margin: 0; */
   cursor: pointer;
-  color: black;
+  color: #b1b1b1;
+  background-color: #fff;
+  font-weight: bold;
+  width: 3.5rem;
+  height: 1%;
+  /* height: 3.5rem; */
+
+}
+
+.comment-form-container {
+  width: 100%;
+}
+
+.comment-reply:hover {
+  cursor: pointer;
+  background-color: #b1b1b1;
+  color: black !important;
+  border: 0.1rem solid black;
+  /* border-color: #111 !important; */
+  transition: all 0.3s ease 0s;
+}
+
+.replyEdit-btn-container {
+  display: flex;
+}
+
+.commentReplyEdit-container {
+  /* display: flex; */
+  /* height: 3.5rem; */
 }
 
 textarea {
-  width: 80%;
+  width: 100%;
   height: 80%;
   border: 1px solid black;
   border-radius: 0.5rem;
@@ -652,8 +690,10 @@ textarea {
 } */
 
 .comment-form {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   height: 20rem;
+  /* width: 100%; */
+  width: 60rem;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
@@ -665,16 +705,18 @@ textarea {
 
 .comment-input {
   width: 100%;
+  /* height: 3.5rem; */
   /* width: 50rem;
   height: 100rem; */
 }
 
 .comment-submit {
-  margin-left: 1rem;
+  height: 3.5rem;
   font-weight: bold;
   text-transform: uppercase;
   color: #222;
-  background: rgb(221, 211, 211);
+  /* background: rgb(221, 211, 211); */
+  background: #b1b1b1;
   padding: 0.9rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
@@ -683,8 +725,9 @@ textarea {
 
 .comment-submit:hover {
   cursor: pointer;
-  color: #fff !important;
+  color: #b1b1b1 !important;
   border: 0.1rem solid black;
+  background-color: #fff;
   /* border-color: #111 !important; */
   transition: all 0.3s ease 0s;
 }
@@ -698,6 +741,7 @@ textarea {
   /* border: 0.1rem solid white; */
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .cancel-comment:hover {
@@ -712,7 +756,7 @@ textarea {
 .comment-buttons {
   margin-left: 0.5rem;
   margin-top: 0.3rem;
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
 }
@@ -817,6 +861,9 @@ textarea {
 .active {
   background-color: #ececec;
 }
+
+
+
 
 .profile-post-container {
   position: relative;
