--- a/src/App.css
+++ b/src/App.css
@@ -157,16 +157,90 @@ li, ul {
   width: 100%;
 }
 
+.subreddit-banner {
+  width: 100%;
+  height: 50%;
+}
+
+.banner-img {
+  width: 100%;
+  height: 100%;
+}
+
+
+.subreddit-header-banner {
+  max-width: 90%;
+  max-height: 15vh;
+  margin: auto;
+  margin-bottom: 2rem;
+  overflow: hidden;
+  /* width: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-repeat: no-repeat;
+  background-size: contain; */
+
+
+}
+
+.subreddit-header-img {
+  width: 100%;
+  height: auto;
+  /* height: 100%; */
+  /* height: auto; */
+  /* object-fit: cover; */
+}
+
+.subreddit-header {
+  display: flex; 
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+
+.subreddit-header-titles {
+
+}
+
+.subreddit-header-line {
+  color: #b1b1b1;
+  font-size: 1.1rem;
+}
+
+.subreddit-img-header-container {
+  /* width: 100%; */
+}
+
+.subreddit-title {
+  font-size: 2rem;
+}
+
+.subreddit-description {
+  font-size: 1.5rem;
+  color: #b1b1b1
+}
+
+.subreddit-img-header {
+  height: 4rem;
+  width: auto;
+}
+
 .subreddit-display-name {
 }
 
 .subreddit-img-container {
   width: 3rem;
+  /* border-radius: 2rem; */
 }
 
 .subreddit-img {
   max-width: 100%;
-  max-height: auto
+  max-height: auto;
+  /* border: 1px solid black; */
+  border-radius: 50%;
 }
 
 
@@ -271,7 +345,11 @@ li, ul {
 
 .active {
   background-color:#3d5af1;
+  /* color: #3d5af1; */
+
 }
+
+
 
 a {
   text-decoration: none;
@@ -347,6 +425,7 @@ a {
   max-height: 20rem;
   max-width: 14rem;
 }
+
 
 .main-text-container {
   /* padding-left: 7rem; */
@@ -868,6 +947,41 @@ textarea {
   margin-bottom: 3rem;
 }
 
+.subreddit-banner-header {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 2rem 0 2rem 0;
+  margin-bottom: 2rem;
+}
+
+.subreddit-display-container {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.display-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.subreddit-title-homepage {
+  width: 100%;
+  /* text-align: center; */
+  font-size: 2.5rem;
+  padding: 2rem;
+}
+
+.subreddit-page-description {
+  color: #b1b1b1;
+  font-size: 1.5rem; 
+}
+
 .sort-container {
   display: flex;
   justify-content: center;
@@ -916,14 +1030,22 @@ textarea {
 
 .RedditDefaultSVG {
   /* width: 50rem; */
+  width: 5rem;
+  height: auto;
+
 }
 
+
+
 .RedditDefault-container {
-  width: 10rem;
+  /* width: 5rem;
+  height: auto; */
 }
 
 .RedditDefault {
   fill: #0079d3;
+  /* width: 100%;
+  height: auto; */
   /* height: 0.3rem; */
 }
 
