--- a/src/App.css
+++ b/src/App.css
@@ -471,6 +471,7 @@ a {
   /* padding: 1rem 3rem 1rem 7rem; */
   width: 100%;
   padding: 3rem 2rem 2rem 2rem;
+
   
   /* border: 1px solid black; */
 }
@@ -580,6 +581,11 @@ a {
   color: #4a4a4a;
 }
 
+.post-url {
+  padding-top: 2rem;
+  font-size: 1.5rem;
+}
+
 .post-details {
   display: flex;
   justify-content: space-between;
@@ -591,9 +597,42 @@ a {
   
 }
 
+.full-post-image {
+  text-align: center;
+}
+
 .author-subreddit-container {
   /* display: flex;
   justify */
+}
+
+.player-container {
+  background: #b8b8b8;
+  border-radius: 0.2rem;
+  display: flex;
+  justify-content: center;
+  /* position: fixed; */
+
+  /* max-height: 25rem; */
+}
+
+.vid-player {
+  
+}
+
+
+.video-react-video {
+  position: relative;
+  height: 25rem;
+  width: 25rem;
+}
+
+.video-react {
+  padding-top: 0;
+}
+
+.video-player {
+  width: 100%;
 }
 
 
@@ -1152,7 +1191,7 @@ textarea {
   height: auto;
 }
 .RisingSVG {
-  width: 30%;
+  /* width: 30%; */
   height: auto;
 }
 
@@ -1221,11 +1260,19 @@ textarea {
   padding-bottom: 1rem;
   display: flex;
   justify-content: space-between;
+  /* align-items: center; */
   font-size: 2.25rem;
   padding-right: 4rem;
 }
 
+
+
 .post-title-text {
+  /* max-height: 7rem; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   color: #4a4a4a;
   padding-right: 2rem;
 }
@@ -1240,6 +1287,7 @@ textarea {
   display: flex;
   justify-content: center;
   padding-right: 4rem;
+  padding-top: 1.5rem;
   opacity: 0.5;
 }
 
@@ -1325,7 +1373,21 @@ textarea {
 .post-subreddit {
   font-size: 1.2rem;
   padding-top: 0.25rem;
+  padding-bottom: 1rem;
   color: #4a4a4a;
+}
+
+.subreddit-image-container {
+}
+
+.post-listing-thumbnail-container {
+  height: auto;
+  width: 10rem;
+}
+
+.post-listing-thumbnail-container img {
+  height: 100%;
+  width: 100%;
 }
 
 .heart-svg {
@@ -1395,6 +1457,108 @@ textarea {
   justify-content: center;
 }
 
+
+
+/* Create Posts */
+
+
+
+.create-post-master {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.create-post-container {
+  background-color: #ffffff;
+  /* background-color: red; */
+  padding: 1rem;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 92%;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.media-post-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.1rem solid transparent;
+  font-size: 1.2rem;
+  color: #4a4a4a;
+}
+
+.media-post-container:hover {
+  border: 0.1rem solid #4a4a4a;
+  border-radius: 0.3rem;
+  transition: 0.2s;
+  cursor: pointer;
+
+}
+
+
+.create-post {
+  width: 60%;
+  height: auto;
+  /* border: 0.1rem solid black; */
+  /* border-radius: 0.3rem; */
+  padding: 2rem;
+}
+
+.create-media-post {
+  width: 20%;
+  height: auto;
+  /* border: 0.1rem solid black; */
+  border-radius: 0.3rem;
+  padding: 2rem;
+}
+
+.create-link-post {
+  width: 20%;
+  height: auto;
+  /* border: 0.1rem solid black; */
+  border-radius: 0.3rem;
+  padding: 2rem;
+}
+
+
+
+
+
+
+
+
+
+@media (max-width: 1500px) {
+	.exercise-button1 {
+		left: 80%
+	}
+	.exercise-button2 {
+		right: 80%
+	}
+
+	.modal-workout-log-group {
+		width: 20%;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* background color: #fcfcfc */
 /* individual post: #ffffff */
 /* author name blue: #5c75f3 */
@@ -1403,3 +1567,4 @@ textarea {
 /* header line color: #ececec */
 
 /* baseline arrow color: #aaaaaa */
+
