--- a/src/App.css
+++ b/src/App.css
@@ -750,6 +750,7 @@ a {
   left: 50%;
   width: 8rem;
   height: 8rem;
+  transform-origin: center center;
   animation: spin 1s linear infinite;
   margin: -4rem 0 0 -4rem;
   
@@ -1144,6 +1145,8 @@ textarea {
   margin: 0 2rem 0 2rem;
   padding: 1rem;
   display: flex;
+  /* min-height: 3rem;
+  min-width: 3rem; */
   width: 10%;
   justify-content: center;
   align-items: center;
@@ -1183,30 +1186,37 @@ textarea {
 
 .HotSVG {
   width: 30%;
+  min-width: 1rem;
   height: auto;
 }
 
 .BestSVG {
   width: 30%;
+  min-width: 1rem;
   height: auto;
 }
 .RisingSVG {
   /* width: 30%; */
+  min-width: 1rem;
   height: auto;
 }
 
 .TopSVG {
   width: 30%;
+  min-width: 1rem;
   height: auto;
 }
 
 .NewSVG {
   width: 30%;
+  min-width: 1rem;
   height: auto;
+  
 }
 
 .sort-menu-svg {
   fill: #4a4a4a;
+
 }
 
 .active {
@@ -1287,7 +1297,7 @@ textarea {
   display: flex;
   justify-content: center;
   padding-right: 4rem;
-  padding-top: 1.5rem;
+  /* padding-top: 1.5rem; */
   opacity: 0.5;
 }
 
@@ -1355,6 +1365,15 @@ textarea {
 }
 
 
+.post-listing-subreddit {
+  text-align: right;
+  font-size: 1.2rem;
+  color: #4a4a4a;
+  padding-bottom: 1rem;
+  padding-right: 4rem;
+}
+
+
 .post-sub-info {
   display: flex;
   justify-content: space-evenly;
@@ -1370,6 +1389,7 @@ textarea {
   font-weight: bold;
 }
 
+
 .post-subreddit {
   font-size: 1.2rem;
   padding-top: 0.25rem;
@@ -1378,6 +1398,10 @@ textarea {
 }
 
 .subreddit-image-container {
+  display: flex;
+  align-items: center;
+  /* display: flex; */
+  /* height: 13.5rem; */
 }
 
 .post-listing-thumbnail-container {
@@ -1526,7 +1550,41 @@ textarea {
 }
 
 
+/* Create Post Page */
+.create-post-page-container {
+  width: 100%;
+  height: 100%;
+  border: 0.1rem solid black;
+  border-radius: 0.2rem;
+}
 
+
+.create-post-form {
+  height: 100%;
+  width: 100%;
+}
+
+.create-post-page-title-container {
+  display: flex;
+  width: 100%;
+  height: 10%;
+  justify-content: space-around;
+}
+
+.create-post-page-title {
+  width: 60%;
+  border: 0.1rem solid yellow;
+}
+
+.create-post-page-subreddit {
+  width: 20%;
+  border: 0.1rem solid red;
+}
+
+.post-type {
+  width: 20%;
+  border: 0.1rem solid blue;
+}
 
 
 
