--- a/src/App.css
+++ b/src/App.css
@@ -1550,6 +1550,8 @@ textarea {
 }
 
 
+
+
 /* Create Post Page */
 .create-post-page-container {
   width: 100%;
@@ -1562,32 +1564,169 @@ textarea {
 .create-post-form {
   height: 100%;
   width: 100%;
+  background-color: #fcfcfc
 }
 
 .create-post-page-title-container {
   display: flex;
   width: 100%;
-  height: 10%;
-  justify-content: space-around;
+  height: 6rem;
+  /* justify-content: space-around; */
 }
 
 .create-post-page-title {
-  width: 60%;
-  border: 0.1rem solid yellow;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 0.1rem solid black; */
+}
+
+.post-input-char-limit {
+  width: 4rem;
+  height: 4rem;
+  /* float: right; */
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+  font-size: 1.3rem;
+  /* position: absolute;
+  left: 147rem; */
+}
+
+.create-post-page-title input[type="text"] {
+  width: 100%;
+  height: 4rem;
+  margin: 1rem;
+  padding: 0rem;
+  font-size: 2rem;
+  padding-left: 1rem;
+  /* padding-right: 6rem; */
+
+}
+
+.additional-post-info {
+  display: flex;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  justify-content: left;
+  align-items: center;
+  height: 5rem;
 }
 
 .create-post-page-subreddit {
-  width: 20%;
-  border: 0.1rem solid red;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  /* border: 0.1rem solid red; */
+  width: 40%;
+  padding: 0rem;
+  margin: 0rem;
+  height: 100%;
 }
+
+.create-post-page-subreddit input[type="text"] {
+  height: 4rem;
+  padding: 0rem;
+  margin: 0rem;
+  width: 100%;
+  font-size: 1.5rem;
+  padding-left: 1rem;
+}
+
 
 .post-type {
-  width: 20%;
-  border: 0.1rem solid blue;
+  display: flex;
+  justify-content: center;
+  /* border: 0.1rem solid blue; */
+  height: 4.4rem;
+  padding: 0rem;
+  margin: 0rem;
+  width: 8rem;
+  padding-left: 1rem;
+}
+
+.post-type select {
+  width: 100%;
+  height: 100%;
+  padding: 0 0 0 1rem;
+  margin: 0rem;
+
+
+}
+
+select.post-select {
+  height: 100%;
+}
+
+.create-post-page-body {
+  /* height: 90%; */
+  display: flex;
+  justify-content: center;
 }
 
 
+.text-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 1rem;
+  height: 30rem;
+  font-size: 2rem;
 
+}
+
+.text-container textarea {
+  padding: 1rem;
+  font-size: 2rem;
+  
+  border-radius: 0.3rem;
+}
+
+.post-text-area {
+  font-size: 2rem;
+  /* height: 50rem; */
+  /* width: 100%; */
+
+}
+
+.subreddit-search-suggestions-container {
+  position: relative;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  
+}
+
+.suggestion-list {
+  padding: 0;
+  margin: 0;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* text */
+  /* width: 100%; */
+  /* align-items: center; */
+}
+
+.suggestion-listing {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* justify-content: center; */
+  /* margin-left: 2rem; */
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  list-style: none;
+  background-color: #b1b1b1;
+  width: 100%;
+  height: 3rem;
+}
+
+.subreddit-subscribers-container {
+  font-size: 1rem;
+}
 
 
 
