--- a/src/App.css
+++ b/src/App.css
@@ -1696,12 +1696,14 @@ select.post-select {
   z-index: 999;
   display: flex;
   align-items: center;
+  /* width: 100%; */
   
 }
 
 .suggestion-list {
   padding: 0;
   margin: 0;
+  width: 100%;
   /* display: flex; */
   /* flex-direction: column; */
   /* justify-content: center; */
@@ -1712,20 +1714,37 @@ select.post-select {
 
 .suggestion-listing {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   /* justify-content: center; */
   /* margin-left: 2rem; */
-  padding: 1.5rem;
+  padding: 2rem;
+  padding-right: 4rem;
   font-size: 1.5rem;
   list-style: none;
-  background-color: #b1b1b1;
-  width: 100%;
+  background-color: rgba(177, 177, 177, 1);
+  /* width: 100%; */
   height: 3rem;
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+
+.suggestion-listing:hover {
+  border: 2px solid white;
 }
 
 .subreddit-subscribers-container {
+  display: flex;
+  /* justify-content: space-evenly; */
+  align-items: center;
   font-size: 1rem;
+  width: 100%;
+}
+
+.subreddit-suggestion-info-container {
+  padding-left: 1rem;
+
+  /* width: 100%; */
 }
 
 
